--- a/src/work.njk
+++ b/src/work.njk
@@ -2,44 +2,132 @@
 layout: base.njk
 isFront: true
 ---
-
 <div class="xl:px-20 lg:px-8 px-4 mx-auto max-w-screen-lg flex flex-col h-screen">
     <div class="w-full flex flex-col">
         <div class="w-full px-4 mb-4">
-            <p class="small pt-48">
-                2022<br />&mdash; 2023
-            </p>
-            <h1 class="pt-16 pb-11">Shopify<br />Section<br />Picker</h1>
-            <p class="pb-7 max-w-screen-sm">In 2022, I rejoined the Online Store team to help evolve the theme design system and the way we use it to enable the team to produce a wider variety of designs, and give our merchants more tools to build their stores.
-Following the systems work, we redesigned how merchants add new sections to their store to make it easier and faster to customize their storefronts.</p>
-        </div>
+            <h1 class="pt-60 pb-11">Shopify<br />Section<br />Picker</h1>
+            <div class="flex">
+                <div class="w-7/12 pr-8">
+                    <p class="pb-7 max-w-screen-sm">In 2022, I rejoined the Online Store team to help evolve the theme design system and give our merchants more tools to build their stores.</p>
+                    <p class="pb-7 max-w-screen-sm">Following the systems work, we redesigned how merchants add new sections to their theme to make it easier and faster to customize their storefronts.</p>
+                    <p class="pb-7 max-w-screen-sm">The new section picker allowed merchants to preview the content they were adding to their theme.</p>
+                    <p class="pb-7 max-w-screen-sm">The illustrations acted as inspiring placeholder content that reflected common best practices of how succesful merchants often art directed their photography.</p>
+                </div>
+                <div class="w-5/12 pl-8">
+                    <div class="flex items-center pb-7">
+                        <span class="small heavy w-28 mr-4 pt-px">TEAM</span>
+                        <div class="flex space-x-4">
+                            <div class="avatar-group">
+                                <img src="../img/Nick.jpeg" alt="Nick Lepine">
+                                <span class="small">Nick Lepine &mdash; PM</span>
+                            </div>
+                            <div class="avatar-group">
+                                <img src="../img/Olivia.jpeg" alt="Olivia Marcello">
+                                <span class="small">Olivia Marcello &mdash; Senior DESIGNER</span>
+                            </div>
+                            <div class="avatar-group">
+                                <img src="../img/Sofia.jpeg" alt="Sofia">
+                                <span class="small">Sofia Matulis &mdash; DEVELOPER</span>
+                            </div>
+                            <div class="avatar-group">
+                                <img src="../img/ludo.jpeg" alt="Ludo">
+                                <span class="small">Ludo Segura &mdash; DEVELOPER</span>
+                            </div>
+                            <div class="avatar-group">
+                                <img src="../img/ally.jpeg" alt="Alistair Lane">
+                                <span class="small">Alistair Lane &mdash; Staff DESIGNER</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="flex items-center pb-7">
+                        <span class="small heavy w-28 mr-4">MY ROLE</span>
+                        <p class="small">Staff Product Designer</p>
+                    </div>
+                    <div class="flex items-center pb-7">
+                        <span class="small heavy w-28 mr-4">YEARS</span>
+                        <p class="small">
+                2022 &mdash; 2023</p>
+                    </div>
+                </div>
+            </div>
+
         <div class="w-full pt-8 px-4">
             <img alt="Section Picker" class="w-full widevideo" src="../img/sectionpicker.png">
-            <p class="pb-7 pt-8 max-w-screen-sm">Section Picker</p>
+            <p class="pb-7 pt-8 max-w-screen-sm">Adding a Collection to a Theme on Desktop</p>
         </div>
         <div class="flex flex-col md:flex-row py-8">
             <div class="w-full md:w-1/2 pl-4 pr-8">
-                <img alt="Managing Products" class="w-full widevideo" src="../img/mobileselect.png">
-                <p class="pb-7 pt-8 max-w-screen-sm">Pick a Section</p>
+                <img alt="Managing Products" class="w-full widevideo" src="../img/mobileadd.png">
+                <p class="pb-7 pt-8 max-w-screen-sm">Choosing a Section on Mobile</p>
             </div>
             <div class="w-full md:w-1/2 pl-8 pr-4">
-                <img alt="Managing Customers" class="w-full widevideo" src="../img/mobileadd.png">
-                <p class="pb-7 pt-8 max-w-screen-sm">Confirm Section</p>
+                <img alt="Managing Customers" class="w-full widevideo" src="../img/mobileselect.png">
+                <p class="pb-7 pt-8 max-w-screen-sm">Selecting a Featured Product Section</p>
             </div>
         </div>
         <div class="w-full pt-8 px-4">
             <video autoplay muted loop playsinline class="w-full widevideo" id="videotwo" src="../img/Editor.mp4" preload="auto"></video>
-            <p class="pb-7 pt-8 max-w-screen-sm">Adding sections to a Shopify theme</p>
+            <p class="pb-7 pt-8 max-w-screen-sm">Workflow of adding multiple sections to a theme (in production)</p>
         </div>
 
-        <div class="w-full px-4 mb-4">
-            <p class="small pt-60">
-                2017<br />&mdash; 2020
-            </p>
-            <h1 class="pt-16 pb-11">Shopify<br />Creative<br />Direction</h1>
-            <p class="pb-7 max-w-screen-sm">The Creative Direction team was made up of design technologists, motion designers, product designers and illustrators.
+        <div class="w-full px-4 mb-4 pt-60">
+            <h1 class="pb-11">Shopify<br />Creative<br />Direction</h1>
+            <div class="flex">
+                <div class="w-7/12 pr-8">
+            <p class="pb-7 max-w-screen-sm">The Creative Direction team was made up of design technologists, motion designers, product designers and illustrators.</p>
 
-In 2017 we shipped the first version of Shopify’s design system &#8212; Polaris. Between 2018 and 2020 I led the team through a complete refresh of our design language.</p>
+<p class="pb-7 max-w-screen-sm">In 2017 we shipped the first version of Shopify’s design system &#8212; Polaris.</p><p class="pb-7 max-w-screen-sm">Between 2018 and 2020 I led the team through a complete refresh of our design language.</p>
+
+                </div>
+                <div class="w-5/12 pl-8">
+                    <div class="flex items-center pb-7">
+                        <span class="small heavy w-28 mr-4 pt-px">TEAM</span>
+                        <div class="flex space-x-4">
+                            <div class="avatar-group">
+                                <img src="../img/jessebc.jpeg" alt="Jesse BC">
+                                <span class="small">Jesse BC &mdash; Principal Designer</span>
+                            </div>
+                            <div class="avatar-group">
+                                <img src="../img/johan.jpeg" alt="Johan Stromqvist">
+                                <span class="small">Johan Stromqvist &mdash; Motion DESIGNER</span>
+                            </div>
+                            <div class="avatar-group">
+                                <img src="../img/marten.jpeg" alt="Marten Bjork">
+                                <span class="small">Marten Bjork &mdash; Design Technologist</span>
+                            </div>
+                            <div class="avatar-group">
+                                <img src="../img/holly.jpeg" alt="Holly Schofield">
+                                <span class="small">Holly Schofield &mdash; Illustrator</span>
+                            </div>
+                            <div class="avatar-group">
+                                <img src="../img/erin.jpeg" alt="Erin Moncrieff">
+                                <span class="small">Erin Moncrieff &mdash; Illustrator</span>
+                            </div>
+                            <div class="avatar-group">
+                                <img src="../img/alisha.jpeg" alt="Alisha Giroux">
+                                <span class="small">Alisha Giroux &mdash; Illustrator</span>
+                            </div>
+                            <div class="avatar-group">
+                                <img src="../img/alek.jpeg" alt="Alek Mackie">
+                                <span class="small">Alek Mackie &mdash; Illustrator</span>
+                            </div>
+                            <div class="avatar-group">
+                                <img src="../img/ally.jpeg" alt="Alistair Lane">
+                                <span class="small">Alistair Lane &mdash; Team Lead</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="flex items-center pb-7">
+                        <span class="small heavy w-28 mr-4">MY ROLE</span>
+                        <p class="small">Team Lead</p>
+                    </div>
+                    <div class="flex items-center pb-7">
+                        <span class="small heavy w-28 mr-4">YEARS</span>
+                        <p class="small">
+                2017&mdash; 2020</p>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="w-full pt-8 px-4">
             <img alt="Login" class="w-full widevideo" src="../img/login.png">
@@ -48,11 +136,11 @@ In 2017 we shipped the first version of Shopify’s design system &#8212; Polari
         <div class="flex flex-col md:flex-row py-8">
             <div class="w-full md:w-1/2 pl-4 pr-8">
                 <img alt="Managing Products" class="w-full widevideo" src="../img/manageproducts.png">
-                <p class="pb-7 pt-8 max-w-screen-sm">Managing Products</p>
+                <p class="pb-7 pt-8 max-w-screen-sm">Empty State for Products</p>
             </div>
             <div class="w-full md:w-1/2 pr-4 pl-8">
                 <img alt="Managing Customers" class="w-full widevideo" src="../img/managecustomers.png">
-                <p class="pb-7 pt-8 max-w-screen-sm">Managing Customers</p>
+                <p class="pb-7 pt-8 max-w-screen-sm">Empty State for Customers</p>
             </div>
         </div>
         <div class="flex flex-col md:flex-row py-8">
@@ -70,29 +158,76 @@ In 2017 we shipped the first version of Shopify’s design system &#8212; Polari
             <p class="pb-7 pt-8 max-w-screen-sm">Pricing</p>
         </div>
 
-        <div class="w-full px-4 mb-4">
-            <p class="small pt-60">
-                2016<br />&mdash; 2017
-            </p>
-            <h1 class="pt-16 pb-11">Frenzy</h1>
-            <p class="pb-7 max-w-screen-sm">Frenzy was one of Shopify’s first consumer products. It allowed merchants to  sell their most hyped products to their biggest fans through limited time flash sales.</p>
+        <div class="w-full px-4 mb-4 pt-60">
+            <h1 class="pb-11">Frenzy</h1>
+
+
+            <div class="flex">
+                <div class="w-7/12 pr-8"><p class="pb-7 max-w-screen-sm">Frenzy was created by the Garage team, which was a purpose-built area in Shopify for rapid, experimental projects.</p>
+<p class="pb-7 max-w-screen-sm">Frenzy was one of Shopify’s first consumer products. It allowed merchants to sell their most hyped products to their biggest fans through limited time flash sales.</p>
+                </div>
+                <div class="w-5/12 pl-8">
+                    <div class="flex items-center pb-7">
+                        <span class="small heavy w-28 mr-4 pt-px">TEAM</span>
+                        <div class="flex space-x-4">
+                            <div class="avatar-group">
+                                <img src="../img/tucker.jpeg" alt="Tucker Schreiber">
+                                <span class="small">Tucker Schreiber &mdash; PM</span>
+                            </div>
+                            <div class="avatar-group">
+                                <img src="../img/nicksimmons.jpeg" alt="Nick Simmons">
+                                <span class="small">Nick Simmons &mdash; Engineering Manager</span>
+                            </div>
+                            <div class="avatar-group">
+                                <img src="../img/Izaak.jpeg" alt="Izaak">
+                                <span class="small">Izaak Halpert &mdash; DEVELOPER</span>
+                            </div>
+                            <div class="avatar-group">
+                                <img src="../img/mike.jpeg" alt="Mike">
+                                <span class="small">Mike Grigoriev &mdash; Senior Researcher</span>
+                            </div>
+                            <div class="avatar-group">
+                                <img src="../img/kelly.jpeg" alt="Kelly">
+                                <span class="small">Kelly Seay &mdash; Designer</span>
+                            </div>
+                            <div class="avatar-group">
+                                <img src="../img/ally.jpeg" alt="Alistair Lane">
+                                <span class="small">Alistair Lane &mdash; Design Lead</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="flex items-center pb-7">
+                        <span class="small heavy w-28 mr-4">MY ROLE</span>
+                        <p class="small">Design Lead</p>
+                    </div>
+                    <div class="flex items-center pb-7">
+                        <span class="small heavy w-28 mr-4">YEARS</span>
+                        <p class="small">
+                2016 &mdash; 2017</p>
+                    </div>
+                </div>
+            </div>
+
+
+
+
+            
         </div>
 
         <div class="flex flex-col md:flex-row py-8">
             <div class="w-full sm:w-1/2 pl-4 pr-8">
                 <img alt="Frenzy" class="w-full widevideo" src="../img/frenzyhome.png">
-                <p class="pb-7 pt-8 max-w-screen-sm">Frenzy Home</p>
+                <p class="pb-7 pt-8 max-w-screen-sm">Flash Sale Before Opening</p>
             </div>
             <div class="w-full sm:w-1/2 pr-4 pl-8">
                 <video autoplay muted loop playsinline class="w-full widevideo" id="videothree" src="../img/frenzyvid.mp4" preload="auto"></video>
-            <p class="pb-7 pt-8 max-w-screen-sm">Frenzy Walkthrough</p>
+            <p class="pb-7 pt-8 max-w-screen-sm">Entering a Sale and Checking Out.</p>
             </div>
         </div>
 
 
     </div>
 </div>
-
     
 
     
