--- a/src/work.njk
+++ b/src/work.njk
@@ -40,10 +40,10 @@ isFront: true
                         </div>
                     </div>
                     <div class="flex items-center pb-7">
-                        <span class="small heavy w-28 mr-4">MY ROLE</span>
-                        <p class="small">Staff Product Designer</p>
+                        <span class="small heavy w-28 mr-4 pb-px">MY ROLE</span>
+                        <p class="small pb-px">Staff Product Designer</p>
                     </div>
-                    <div class="flex items-center pb-7">
+                    <div class="flex items-center pb-7 pt-1">
                         <span class="small heavy w-28 mr-4">YEARS</span>
                         <p class="small">
                 2022 &mdash; 2023</p>
@@ -118,10 +118,10 @@ isFront: true
                         </div>
                     </div>
                     <div class="flex items-center pb-7">
-                        <span class="small heavy w-28 mr-4">MY ROLE</span>
-                        <p class="small">Team Lead</p>
+                        <span class="small heavy w-28 mr-4 pb-px">MY ROLE</span>
+                        <p class="small pb-px">Team Lead</p>
                     </div>
-                    <div class="flex items-center pb-7">
+                    <div class="flex items-center pb-7 pt-1">
                         <span class="small heavy w-28 mr-4">YEARS</span>
                         <p class="small">
                 2017&mdash; 2020</p>
@@ -197,10 +197,10 @@ isFront: true
                         </div>
                     </div>
                     <div class="flex items-center pb-7">
-                        <span class="small heavy w-28 mr-4">MY ROLE</span>
-                        <p class="small">Design Lead</p>
+                        <span class="small heavy w-28 mr-4 pb-px">MY ROLE</span>
+                        <p class="small pb-px">Design Lead</p>
                     </div>
-                    <div class="flex items-center pb-7">
+                    <div class="flex items-center pb-7 pt-1">
                         <span class="small heavy w-28 mr-4">YEARS</span>
                         <p class="small">
                 2016 &mdash; 2017</p>
