--- a/src/_includes/css/_page.css
+++ b/src/_includes/css/_page.css
@@ -18,11 +18,17 @@ html {
 }
 
 h1 {
-  color: #000;
   font-size: 80px;
   font-style: normal;
   font-weight: 670;
   line-height: 74px;
+}
+
+@media screen and (max-width: 600px) {
+  h1 {
+    font-size: 64px;
+    line-height: 64px;
+  }
 }
 
 h2 {
@@ -174,7 +180,7 @@ h4 {
 
 .avatar-group img {
   width: 24px;
-  height: 24px;
+  height: auto;
   border-radius: 50%;
   border: 1px solid #e7ebef;
 }
