--- a/src/work.njk
+++ b/src/work.njk
@@ -2,18 +2,18 @@
 layout: base.njk
 isFront: true
 ---
-<div class="xl:px-20 lg:px-8 px-4 mx-auto max-w-screen-lg flex flex-col h-screen">
-    <div class="w-full flex flex-col">
-        <div class="w-full px-4 mb-4">
-            <h1 class="pt-60 pb-11">Shopify<br />Section<br />Picker</h1>
-            <div class="flex">
-                <div class="w-7/12 pr-8">
+<div class="xl:px-20 px-8 mx-auto max-w-screen-lg flex flex-col">
+    <div class="w-full mx-auto flex flex-col">
+        <div class="w-full md:px-4 mb-4">
+            <h1 class="pt-24 md:pt-60 pb-11">Shopify<br />Section<br />Picker</h1>
+            <div class="flex flex-col md:flex-row">
+                <div class="w-full md:w-7/12 md:pr-8">
                     <p class="pb-7 max-w-screen-sm">In 2022, I rejoined the Online Store team to help evolve the theme design system and give our merchants more tools to build their stores.</p>
                     <p class="pb-7 max-w-screen-sm">Following the systems work, we redesigned how merchants add new sections to their theme to make it easier and faster to customize their storefronts.</p>
                     <p class="pb-7 max-w-screen-sm">The new section picker allowed merchants to preview the content they were adding to their theme.</p>
                     <p class="pb-7 max-w-screen-sm">The illustrations acted as inspiring placeholder content that reflected common best practices of how succesful merchants often art directed their photography.</p>
                 </div>
-                <div class="w-5/12 pl-8">
+                <div class="w-full md:w-5/12 md:pl-8">
                     <div class="flex items-center pb-7">
                         <span class="small heavy w-28 mr-4 pt-px">TEAM</span>
                         <div class="flex space-x-4">
@@ -51,35 +51,35 @@ isFront: true
                 </div>
             </div>
 
-        <div class="w-full pt-8 px-4">
+        <div class="w-full pt-8 md:pt-16 md:px-4">
             <img alt="Section Picker" class="w-full widevideo" src="../img/sectionpicker.png">
             <p class="pb-7 pt-8 max-w-screen-sm">Adding a Collection to a Theme on Desktop</p>
         </div>
-        <div class="flex flex-col md:flex-row py-8">
-            <div class="w-full md:w-1/2 pl-4 pr-8">
+        <div class="flex flex-col md:flex-row">
+            <div class="w-full py-16 md:w-1/2 md:pl-4 md:pr-8">
                 <img alt="Managing Products" class="w-full widevideo" src="../img/mobileadd.png">
                 <p class="pb-7 pt-8 max-w-screen-sm">Choosing a Section on Mobile</p>
             </div>
-            <div class="w-full md:w-1/2 pl-8 pr-4">
+            <div class="w-full py-16 pt-0 md:pt-16 md:w-1/2 md:pl-8 md:pr-4">
                 <img alt="Managing Customers" class="w-full widevideo" src="../img/mobileselect.png">
                 <p class="pb-7 pt-8 max-w-screen-sm">Selecting a Featured Product Section</p>
             </div>
         </div>
-        <div class="w-full pt-8 px-4">
+        <div class="w-full md:px-4">
             <video autoplay muted loop playsinline class="w-full widevideo" id="videotwo" src="../img/Editor.mp4" preload="auto"></video>
             <p class="pb-7 pt-8 max-w-screen-sm">Workflow of adding multiple sections to a theme (in production)</p>
         </div>
 
-        <div class="w-full px-4 mb-4 pt-60">
+        <div class="w-full md:px-4 mb-4 pt-60">
             <h1 class="pb-11">Shopify<br />Creative<br />Direction</h1>
-            <div class="flex">
-                <div class="w-7/12 pr-8">
+            <div class="flex flex-col md:flex-row">
+                <div class="w-full md:w-7/12 md:pr-8">
             <p class="pb-7 max-w-screen-sm">The Creative Direction team was made up of design technologists, motion designers, product designers and illustrators.</p>
 
 <p class="pb-7 max-w-screen-sm">In 2017 we shipped the first version of Shopify’s design system &#8212; Polaris.</p><p class="pb-7 max-w-screen-sm">Between 2018 and 2020 I led the team through a complete refresh of our design language.</p>
 
                 </div>
-                <div class="w-5/12 pl-8">
+                <div class="w-full md:w-5/12 md:pl-8">
                     <div class="flex items-center pb-7">
                         <span class="small heavy w-28 mr-4 pt-px">TEAM</span>
                         <div class="flex space-x-4">
@@ -129,44 +129,44 @@ isFront: true
                 </div>
             </div>
         </div>
-        <div class="w-full pt-8 px-4">
+        <div class="w-full pt-8 md:pt-16 md:px-4">
             <img alt="Login" class="w-full widevideo" src="../img/login.png">
             <p class="pb-7 pt-8 max-w-screen-sm">Login</p>
         </div>
-        <div class="flex flex-col md:flex-row py-8">
-            <div class="w-full md:w-1/2 pl-4 pr-8">
+        <div class="flex flex-col md:flex-row">
+            <div class="w-full md:w-1/2 py-16 md:pl-4 md:pr-8">
                 <img alt="Managing Products" class="w-full widevideo" src="../img/manageproducts.png">
                 <p class="pb-7 pt-8 max-w-screen-sm">Empty State for Products</p>
             </div>
-            <div class="w-full md:w-1/2 pr-4 pl-8">
+            <div class="w-full md:w-1/2 py-16 pt-0 md:pt-16 md:pr-4 md:pl-8">
                 <img alt="Managing Customers" class="w-full widevideo" src="../img/managecustomers.png">
                 <p class="pb-7 pt-8 max-w-screen-sm">Empty State for Customers</p>
             </div>
         </div>
-        <div class="flex flex-col md:flex-row py-8">
-            <div class="w-full sm:w-1/2 pl-4 pr-8">
+        <div class="flex flex-col md:flex-row">
+            <div class="w-full md:w-1/2 pb-16 md:pl-4 md:pr-8">
                 <img alt="Onboarding" class="w-full widevideo" src="../img/mobilehome1.png">
                 <p class="pb-7 pt-8 max-w-screen-sm">Onboarding</p>
             </div>
-            <div class="w-full sm:w-1/2 pr-4 pl-8">
+            <div class="w-full md:w-1/2 pb-16 md:pr-4 md:pl-8">
                 <img alt="Home" class="w-full widevideo" src="../img/mobilehome2.png">
                 <p class="pb-7 pt-8 max-w-screen-sm">Home</p>
             </div>
         </div>
-        <div class="w-full py-8 px-4">
-            <img alt="Login" class="w-full widevideo" src="../img/pricing.png">
+        <div class="w-full md:px-4">
+            <img alt="Pricing" class="w-full widevideo" src="../img/pricing.png">
             <p class="pb-7 pt-8 max-w-screen-sm">Pricing</p>
         </div>
 
-        <div class="w-full px-4 mb-4 pt-60">
+        <div class="w-full md:px-4 mb-4 pt-60">
             <h1 class="pb-11">Frenzy</h1>
 
 
-            <div class="flex">
-                <div class="w-7/12 pr-8"><p class="pb-7 max-w-screen-sm">Frenzy was created by the Garage team, which was a purpose-built area in Shopify for rapid, experimental projects.</p>
+            <div class="flex flex-col md:flex-row">
+                <div class="w-full md:w-7/12 md:pr-8"><p class="pb-7 max-w-screen-sm">Frenzy was created by the Garage team, which was a purpose-built area in Shopify for rapid, experimental projects.</p>
 <p class="pb-7 max-w-screen-sm">Frenzy was one of Shopify’s first consumer products. It allowed merchants to sell their most hyped products to their biggest fans through limited time flash sales.</p>
                 </div>
-                <div class="w-5/12 pl-8">
+                <div class="w-full md:w-5/12 md:pl-8">
                     <div class="flex items-center pb-7">
                         <span class="small heavy w-28 mr-4 pt-px">TEAM</span>
                         <div class="flex space-x-4">
@@ -214,12 +214,12 @@ isFront: true
             
         </div>
 
-        <div class="flex flex-col md:flex-row py-8">
-            <div class="w-full sm:w-1/2 pl-4 pr-8">
+        <div class="flex flex-col md:flex-row">
+            <div class="w-full md:w-1/2 md:pl-4 md:pr-8 py-16">
                 <img alt="Frenzy" class="w-full widevideo" src="../img/frenzyhome.png">
                 <p class="pb-7 pt-8 max-w-screen-sm">Flash Sale Before Opening</p>
             </div>
-            <div class="w-full sm:w-1/2 pr-4 pl-8">
+            <div class="w-full md:w-1/2 md:pr-4 md:pl-8 py-16 pt-0 md:pt-16">
                 <video autoplay muted loop playsinline class="w-full widevideo" id="videothree" src="../img/frenzyvid.mp4" preload="auto"></video>
             <p class="pb-7 pt-8 max-w-screen-sm">Entering a Sale and Checking Out.</p>
             </div>
